--- a/pathfinder/proj1_laravel/laravel_blog/resources/assets/sass/app.scss
+++ b/pathfinder/proj1_laravel/laravel_blog/resources/assets/sass/app.scss
@@ -2,9 +2,137 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+/* navbar */
+li {
+  padding-left: 10px;
+}
+
 .meta-navbar {
   background-color: white;
-  color: black;
   font-family: arial;
-  font-size: 50px;
+  font-size: 20px;
+  vertical-align: middle;
+  padding: 5px;
+  border-bottom: 1px solid black;
+  position: fixed;
+  width: 100%;
+  z-index:1;
+}
+
+/* title */
+.title {
+  font-family: cursive;
+  padding: 50px 100px 30px 100px;
+}
+
+/* login & register */
+
+
+/* other */
+.float-left {
+  float: left;
+}
+.float-right {
+  float: right;
+}
+#main-padding {
+  padding: 100px;
+}
+.text-black {
+  color: black;
+}
+.bg-white {
+  background-color: white;
+}
+.btn-white {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+.text-grey {
+  color: grey;
+}
+
+.cursive {
+  font-family: cursive;
+}
+
+/* display */
+.display-none {
+  display: none;
+}
+.inline {
+  display: inline;
+}
+.display-inline-block {
+  display: inline-block;
+}
+.display-block {
+  display: block;
+}
+
+/* padding */
+.padding-100 {
+  padding: 100px;
+}
+.padding-50 {
+  padding: 50px;
+}
+.padding-30 {
+  padding: 30px;
+}
+.padding-bottom-50 {
+  padding-bottom: 50px;
+}
+.padding-top-30 {
+  padding-top: 30px;
+}
+.padding-top-20 {
+  padding-top: 20px;
+}
+.padding-top-10 {
+  padding-top: 10px;
+}
+
+/* borders */
+.border-top {
+  border-top: 1px solid black;
+}
+.border-bottom-dashed {
+  border-bottom: 1px dashed black; 
+}
+
+/* margins */
+.margin-0-50-20-50 {
+  margin: 0px 50px 20px 50px;
+}
+
+/* scrollbars */
+.comments-scrollbar {
+  height:200px;
+  width:100%;
+  overflow:scroll;
+}
+
+/* width & height */
+.w100-h100px {
+  width:100%;
+  height:100px;
+}
+.w80-h100px {
+  width: 80%;
+  height: 100px;
+}
+.w100-h40px {
+  width:100px;
+  height:40px;
+}
+.w50 {
+  width: 50%;
+}
+
+
+/* li with no bullet pt */
+.list-style-type-none {
+  list-style-type: none;
 }
