--- a/pathfinder/proj1_laravel/laravel_blog/public/css/app.css
+++ b/pathfinder/proj1_laravel/laravel_blog/public/css/app.css
@@ -10124,8 +10124,6 @@ li {
 /* scrollbars */
 
 .comments-scrollbar {
-  height: 200px;
-  width: 100%;
   overflow: scroll;
 }
 
@@ -10141,9 +10139,14 @@ li {
   height: 100px;
 }
 
-.w100-h40px {
-  width: 100px;
-  height: 40px;
+.w100-h20px {
+  width: 100%;
+  height: 10px;
+}
+
+.w100-h200px {
+  width: 100%;
+  height: 200px;
 }
 
 .w50 {
