--- a/pathfinder/proj1_laravel/laravel_blog/resources/assets/sass/app.scss
+++ b/pathfinder/proj1_laravel/laravel_blog/resources/assets/sass/app.scss
@@ -109,8 +109,6 @@ li {
 
 /* scrollbars */
 .comments-scrollbar {
-  height:200px;
-  width:100%;
   overflow:scroll;
 }
 
@@ -123,14 +121,17 @@ li {
   width: 80%;
   height: 100px;
 }
-.w100-h40px {
-  width:100px;
-  height:40px;
+.w100-h20px {
+  width:100%;
+  height:10px;
+}
+.w100-h200px {
+  width:100%;
+  height:200px;
 }
 .w50 {
   width: 50%;
 }
-
 
 /* li with no bullet pt */
 .list-style-type-none {
